# cfa_mono_repo_test

./: .bazelrc  .env.template  .gitignore  Dockerfile  README.md  WORKSPACE.bazel  docker-compose.yml
projects/common/: BUILD.bazel
projects/common/src/: health.py
projects/debunkbot/: BUILD.bazel  main.py  worker.sh
projects/twoopstracker/: BUILD.bazel  celery_worker.py  docker-compose.yml  gunicorn.py  gunicorn_worker.py  requirements-dev.txt  worker.sh
projects/twoopstracker/contrib/docker/: cmd.sh
