load("@rules_python//python:defs.bzl", "py_binary")
load("@twoopstracker_requirements//:requirements.bzl", "requirement")

py_binary(
    name="twoopstracker",
    srcs=["manage.py"],
    main="manage.py",
    deps=[
        "//projects/common:common",
        requirement("boto3"),
        requirement("celery"),
        requirement("environs"),
        requirement("dj_database_url"),
        requirement("psycopg2-binary"),
        requirement("django-cors-headers"),
        requirement("django-storages"),
        requirement("djangorestframework"),
        requirement("djangorestframework-simplejwt"),
        requirement("django-allauth"),
        requirement("dj-rest-auth"),
        requirement("google-api-python-client"),
        requirement("google-auth-httplib2"),
        requirement("google-auth-oauthlib"),
        requirement("greenlet"),
        requirement("redis"),
        requirement("requests"),
        requirement("tweepy"),
        requirement("tablib"),
        requirement("sentry-sdk"),
    ]
)

py_binary(
    name="manage_gunicorn",
    srcs=["gunicorn_worker.py"],
    main="gunicorn_worker.py",
    deps=[
        requirement("gunicorn"),
        requirement("gevent"),
    ]
)

py_binary(
    name="manage_celery",
    srcs=["celery_worker.py"],
    main="celery_worker.py",
    deps=[":twoopstracker",]
)

# https://stackoverflow.com/a/64841428/5562041
sh_binary(
    name="worker",
    srcs=["worker.sh"],
    data = [":twoopstracker", ":manage_gunicorn", ":manage_celery"],
    deps = ["@bazel_tools//tools/bash/runfiles",],
)
